--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "events.web",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +14,14 @@
   },
   "dependencies": {
     "firebase": "^9.13.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Kaushal2710/Events.web.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Kaushal2710/Events.web/issues"
+  },
+  "homepage": "https://github.com/Kaushal2710/Events.web#readme",
+  "description": ""
 }
